Fix some small alignment.

--- a/src/Styles/partnerShip/shared_reasponsibility.css
+++ b/src/Styles/partnerShip/shared_reasponsibility.css
@@ -2,20 +2,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 80px;
 }
 
 .shared_reasponsibility-sub-container {
   max-width: 1344px;
   width: 1344px;
-  border-top: 1px solid rgba(128, 128, 128, 0.5);
-  padding-top: 24px;
+  border-top: 1px solid rgba(128, 128, 128, 0.3);
+  padding-top: 128px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .reasponsibility_content-container {
-  max-width: 33.33%;
+  max-width: calc(100%/3);
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -25,9 +26,9 @@
   }
 
   .responsibility_content-body {
-    border-left: 1px solid rgba(128, 128, 128, 0.5);
+    border-left: 1px solid rgba(128, 128, 128, 0.3);
     padding-left: 16px;
-    padding-right: 16px;
+    padding-right: 48px;
 
     .responsibility-card-container {
       display: flex;
@@ -42,7 +43,6 @@
         .responsibility-img-container {
           width: 80px;
           margin-right: 16px;
-
         }
       }
     }
